--- a/manifest.json
+++ b/manifest.json
@@ -1,26 +1,26 @@
 {
-    "manifest_version": 2,
-    "name": "Things3 Chrome Extension",
+    "manifest_version": 3,
+    "name": "Things3 for Chrome",
     "version": "1.0",
-    "description": "A Chrome extension for saving to Things3",
+    "description": "A Chrome extension for adding URLs to Things3 tasks",
+    "default_locale": "en",
     "icons": {
-      "16": "images/icon16.png",
-      "48": "images/icon48.png",
-      "64": "images/icon64.png",
-      "128": "images/icon128.png"
-    },
-    "browser_action": {
-      "default_popup": "popup.html",
-      "default_icon": {
         "16": "images/icon16.png",
         "48": "images/icon48.png",
-        "64": "images/icon48.png",
+        "64": "images/icon64.png",
         "128": "images/icon128.png"
-      }
     },
-    "permissions": [
-      "tabs",
-      "contextMenus"
-    ]
-  }
-  
+    "background": {
+        "service_worker": "background.js"
+    },
+    "permissions": ["activeTab", "tabs", "contextMenus"],
+    "action": {
+        "default_icon": {
+            "16": "images/icon16.png",
+            "48": "images/icon48.png",
+            "64": "images/icon64.png",
+            "128": "images/icon128.png"
+        },
+        "default_title": "Add this page to Things3"
+    }
+}
